kube-manifests/HTTProute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-app-route
  namespace: default
spec:
  # Uncomment when domain is ready:
  # hostnames:
  #   - "gofeed-demo.eu.org"
  parentRefs:
    - group: gateway.networking.k8s.io
      namespace: default
      kind: Gateway
      name: go-feed-gateway
      sectionName: http
    # Uncomment when HTTPS is ready:
    # - group: gateway.networking.k8s.io
    #   namespace: default
    #   kind: Gateway
    #   name: go-feed-gateway
    #   sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1
      backendRefs:
        - name: go-feed
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: go-feed-frontend
          port: 8080
